# python-pybootstrapgui

./: .gitignore  PUBLIC.txt  README.md  publish.sh  pyproject.toml  requirements.txt
examples/locker_bootstrap_app/: locker_bootstrap_page.py  main_server.py  main_webview.py
examples/navbar_offcanvas/: navbar_offcanvas_page.py
examples/shop_bootstrap_app/: main.py  shop_bootstrap_page.py
examples/simple_webview_app/: simple_webview_app.py
src/pybootstrapgui/: __init__.py  base.py  bootstrap_builder.py  components.py  html_builder.py  tag.py  utils.py
src/pybootstrapgui/extensions/: __init__.py  html_comments.py  jinja_components.py  pywebview_utils.py
src/pybootstrapgui/prebuilt_components/: __init__.py
tests/: architecture.py  test_bootstrap_builder.py  test_html_builder.py
